MemberService/k8s/member-service-np-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: member-service-srv
spec:
  type: NodePort
  selector:
    app: member-service
  ports:
  - name: member-service
    protocol: TCP
    port: 8080
    targetPort: 8080
